force-app/main/default/objects/Client_Plan__c/Client_Plan__c.object-meta.xml
<CustomObject>
    <label>Client Plan</label>
    <nameField>
        <label>Client Plan Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Client Plan</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>