force-app/main/default/objects/Client_Plan__c/fields/Additional_Approver_2__c.field-meta.xml
<CustomField>
    <fullName>Additional_Approver_2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>The Sector/Client Coverage Head on the client team that can approve the client plan</inlineHelpText>
    <label>Additional Approver 2</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Client_Plan3</relationshipName>
    <type>Lookup</type>
</CustomField>