force-app/main/default/objects/Client_Plan__c/fields/Additional_Approver__c.field-meta.xml
<CustomField>
    <fullName>Additional_Approver__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>The Executive Sponsor on the client team that can approve the client plan</inlineHelpText>
    <label>Additional Approver</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Client_Plan2</relationshipName>
    <type>Lookup</type>
</CustomField>