force-app/main/default/objects/Client_Plan__c/fields/Can_be_Submitted__c.field-meta.xml
<CustomField>
    <fullName>Can_be_Submitted__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Can be Submitted</label>
    <type>Checkbox</type>
</CustomField>