force-app/main/default/objects/Client_Plan__c/fields/Client_Name__c.field-meta.xml
<CustomField>
    <fullName>Client_Name__c</fullName>
    <description>Field that stores Client Plan object relationship with Client Object</description>
    <label>Client Name</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Client Plan</relationshipLabel>
    <relationshipName>Client_Plan</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>