force-app/main/default/objects/Client_Plan__c/fields/Client_Plan_Status__c.field-meta.xml
<CustomField>
    <fullName>Client_Plan_Status__c</fullName>
    <label>Client Plan Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>To Be Reviewed</fullName>
                <default>true</default>
                <label>To Be Reviewed</label>
            </value>
            <value>
                <fullName>Submitted For Approval</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>