force-app/main/default/objects/Client_Plan__c/fields/Client_Plan_Views__c.field-meta.xml
<CustomField>
    <fullName>Client_Plan_Views__c</fullName>
    <label>Client Plan Views</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>