force-app/main/default/objects/Client_Plan__c/fields/CSI_Selection__c.field-meta.xml
<CustomField>
    <fullName>CSI_Selection__c</fullName>
    <description>Stores the Id of the selected CSI</description>
    <label>CSI Selection</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>