force-app/main/default/objects/Client_Plan__c/fields/Current_CC_Line_Manager__c.field-meta.xml
<CustomField>
    <fullName>Current_CC_Line_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Current CC Line Manager</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Client_Plan1</relationshipName>
    <type>Lookup</type>
</CustomField>