force-app/main/default/objects/Client_Plan__c/fields/Initial_Submitter__c.field-meta.xml
<CustomField>
    <fullName>Initial_Submitter__c</fullName>
    <description>The Initial submitter can be the Client Co-oridnator and the CCBM</description>
    <label>Initial Submitter</label>
    <type>Email</type>
</CustomField>