force-app/main/default/objects/Client_Plan__c/fields/Opportunity_Selection__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Selection__c</fullName>
    <description>Stores Id&apos;s of selected opportunities</description>
    <label>Opportunity Selection</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>