force-app/main/default/objects/Client_Plan__c/fields/Submitter_Line_Manager__c.field-meta.xml
<CustomField>
    <fullName>Submitter_Line_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Submitter Line Manager</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Client_Plan</relationshipName>
    <type>Lookup</type>
</CustomField>