force-app/main/default/objects/Client_Plan__c/fields/Task_Selection__c.field-meta.xml
<CustomField>
    <fullName>Task_Selection__c</fullName>
    <description>Stores Id&apos;s of selected tasks</description>
    <label>Task Selection</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>