force-app/main/default/objects/Client_Plan__c/fields/Team_Selection__c.field-meta.xml
<CustomField>
    <fullName>Team_Selection__c</fullName>
    <description>Stores the Id of the selected Client Team</description>
    <label>Team Selection</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>