force-app/main/default/objects/Client_Plan__c/fields/View_Client_Plan__c.field-meta.xml
<CustomField>
    <fullName>View_Client_Plan__c</fullName>
    <formula>hyperlink($Setup.Environment_Variable__c.serverURL__c + &quot;/apex/ClientPlanPDF?scontrolCaching=1&amp;id=&quot; + Client_Name__r.Id, Name,&quot;_blank&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Link to view the Client Plan for approval. The ability to view the Client Plan may be restricted for Compliance reasons. For access queries, please contact the Client Coordinator.</inlineHelpText>
    <label>View Client Plan</label>
    <type>Text</type>
</CustomField>